JpaStreamer added